<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--单选模式single-->
    <!--<group android:checkableBehavior="single">-->
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_menu_offer"
            android:title="@string/notice_title" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_offer"
            android:title="@string/school_news_title" />
        <item
            android:id="@+id/nav_dynamicMsg"
            android:icon="@drawable/ic_menu_offer"
            android:title="@string/dynamic_msg_title" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_menu_search"
            android:title="成绩查询" />
    </group>

    <item android:title="管理">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_menu_theme"
                android:title="主题" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_settings"
                android:title="设置" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_widgets"
                android:title="关于"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="退出"/>
        </menu>
    </item>

</menu>
