<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:id="@+id/query_grade_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pers.lime.jjvu.QueryGradeActivity"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/top_grade_img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="?attr/colorPrimary"/>
    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="46dp"
        android:padding="4dp"
        android:background="@drawable/circle_textview_style"
        android:src="@mipmap/ic_jjvu_logo_big"
        android:layout_centerHorizontal="true"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/user_layout"
        android:layout_below="@+id/top_logo">

        <EditText
            android:id="@+id/text_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="16"
            android:hint="@string/hint_user" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_layout"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/text_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_pwd" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/pwd_layout"
        android:layout_centerHorizontal="true"
        android:textColor="?attr/colorPrimary"
        style="@style/ButtonStyleBase"
        android:textSize="16sp"
        android:text="登录" />
    <TextView
        android:id="@+id/lime_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/colorDivider"
        android:paddingBottom="2dp"
        android:textSize="14sp"
        android:text="@string/about_grade"/>
    <LinearLayout
        android:id="@+id/grade_pop_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:layout_below="@+id/lime_tag"
        android:orientation="horizontal">
    </LinearLayout>

</RelativeLayout>
